# ModeTrend

./: .env.example  README.md  huggingface_api_cloth_seg.ipynb  pyproject.toml
