[project]
name = "modetrend"
version = "0.1.0"
description = "Analyse de vêtement avec l'ia"
authors = [
    {name = "GRONDIN William"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "ipykernel (>=7.0.1,<8.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
